2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el: Rewrite to implement form elements "by hand" instead of
	relying in widget.el.  Using widget.el leads to too many
	user interface inconsistencies.
	(eww-self-insert): Implement entering commands in text fields.
	(eww-process-text-input): New function to make text input field editing
	work.

	* shr.el (shr-urlify): Use `keymap' instead of `local-map' so that we
	don't shadow mode-specific bindings.

	* eww.el (eww-browse-url): Don't push stuff onto history if there's
	nothing to push.

	* shr.el (shr-map): Bind [down-mouse-1] to browse URLs.

2013-06-19  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-mark-article-as-read): Fix declaration.

2013-06-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-parse-entries): Remove debugging.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-make-table-1): Implement <td rowspan>.
	(shr-table-horizontal-line): Allow nil as a value, and change the
	default.
	(shr-insert-table-ruler): Respect the nil value.

2013-06-18  Tom Tromey  <tromey@barimba>

	* eww.el (eww-next-url, eww-previous-url, eww-up-url, eww-top-url):
	New defvars.
	(eww-open-file): New defun.
	(eww-render): Initialize new variables.
	(eww-display-html): Handle "link" and "a".
	(eww-handle-link, eww-tag-link, eww-tag-a): New defuns.
	(eww-mode-map): Move "p" to "l".  Bind "p", "n", "t", and "u".
	(eww-back-url): Rename from eww-previous-url.
	(eww-next-url, eww-previous-url, eww-up-url, eww-top-url): New
	defuns.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-table): Insert the images after the table, so that
	they're not covered by the table colourisation, which often looked
	awkward.
	(shr-tag-dl, shr-tag-dt, shr-tag-dd): Add support for <dl>, <dt> and
	<dd>.
	(shr-make-table-1): Implement <td colspan=> support.
	(shr-insert-document): Use one less than window width if `shr-width' is